--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <h1>RADNA EVENTS</h1>
+                    <h1 style="background-color: #000000"><img src="img/Radna_events_logo_tw.jpg" height="46px" width="44px"/> RADNA EVENTS </h1>
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#intro">Home</a></li>
+        <li><a href="#intro">Home</a></li>
 		<li><a href="#service">Services</a></li>
 		<li><a href="#about">About</a></li>
 		<li><a href="#contact">Contact</a></li>
@@ -59,6 +59,7 @@
 		<div class="slogan">
 			<h2>WELCOME TO <span class="text_color">RADNA EVENTS</span> </h2>
 			<h4>WE HELP WITH EVENT PLANNING, EXECUTION, MARKETING CAMPAIGN MANAGEMENT, NEW BUSINESS LAUNCH</h4>
+			<!--<h5><img src="img/radna_logo_semi.jpg"/></h5>-->
 		</div>
 		<div class="page-scroll">
 			<a href="#service" class="btn btn-circle">
@@ -77,7 +78,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Our Services</h2>
+					<h2 class="text_color">Our Services</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -158,7 +159,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>About us</h2>
+					<h2 class="text_color">About us</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -236,7 +237,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Get in touch</h2>
+					<h2 class="text_color">Get in touch</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 					<br>We primarily work in the Greater Toronto Area
 					</div>
@@ -303,7 +304,7 @@
 			<div class="widget-contact">
 				
 				<address>
-				  <strong>Shipra Mathur</strong><br>
+				  <strong>Phone </strong> (Mon-Sat 9am-5pm)<br>
 				  <abbr title="Phone"></abbr> (647)970-1348 <br>
 				</address>
 
@@ -312,11 +313,12 @@
 				  <a href="mailto:#">shipra@radnaevents.com</a>
 				</address>	
 				<address>
-				  <strong>We're on social networks</strong><br>
+				  <strong>Social networks</strong><br>
                        	<ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                            <li class="social-facebook"><a href="https://www.facebook.com/RadnaEvents" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li class="social-twitter"><a href="https://twitter.com/RadnaEvents" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li class="social-google"><a href="https://plus.google.com/+RadnaEventsMississauga/" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                            <li class="social-linkedin"><a href="https://www.linkedin.com/company/radna-events" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         </ul>	
 				</address>					
 			
@@ -329,23 +331,24 @@
 	<!-- /Section: contact -->
 
 	<!-- Section: work -->
-	<section id="service" class="home-section text-center bg-gray">
+	<section id="work" class="home-section text-center bg-gray">
 		
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow fadeInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Our work</h2>
+					<h2 class="text_color">Our work</h2>
+					</div>
 					<p>
-						“I have had the pleasure of working with Radna Events on a number of corporate marketing and sales events. Shipra is a dedicated and precise operator with absolute terrific attention to detail and above all executes a professional and polished event every time. She has the ability to anticipate your needs and makes sure they are delivered.”
+						“I have had the pleasure of working with Radna Events on a number of corporate marketing and sales events. Shipra is a dedicated and precise operator with absolute terrific attention to detail and above all executes a professional and polished event every time. <br>
+						She has the ability to anticipate your needs and makes sure they are delivered.”
 						<br>
 						- Bruce Leslie, Publisher &amp; Editor, Star Media Group
 					</p>
 					
-					(SLIDE SHOW)
+					(SLIDE SHOW coming soon.)
 
-					</div>
 					</div>
 				</div>
 			</div>
